--- a/WebrariaTesting_Dev-master/css/intro.css
+++ b/WebrariaTesting_Dev-master/css/intro.css
@@ -111,3 +111,65 @@ h1{
     
     cursor:pointer;
 }
+
+#sign{
+    font-size:70px;
+    color:#fff;
+    
+    font-weight:900;
+}
+
+
+#up{
+    font-size:70px;
+    color:black;
+    
+    font-weight:900;
+}
+
+#signUpText{
+    width:100%;
+    height:20%;
+    
+    text-align:center;
+    
+    padding-top:10%;    
+}
+
+#signUpBox{
+    
+    width:100%;
+    height:80%;
+    
+}
+
+input{
+    margin-bottom:1%;
+    
+    margin-left:42vw;
+    display:block;
+
+    width:15vw;
+    height:3vh;
+    
+    border:3px solid #434343;
+    
+    font-size:20px;
+    padding-left;3px;
+
+    border-radius:5px;
+    
+    background-color:rgba(0,0,0,0.6);
+    
+    color:black;
+}
+
+
+
+#username{
+    margin-top:2%;
+}
+
+#signup{
+    
+}
